--- a/prettier/.prettierrc
+++ b/prettier/.prettierrc
@@ -1,6 +1,5 @@
 {
-    "tabWidth": 2,
+    "tabWidth": 4,
     "useTabs": false,
-    "proseWrap": "always",
-    "htmlWhitespaceSensitivity": "ignore",
+    "proseWrap": "always"
 }
